--- a/portfolio.html
+++ b/portfolio.html
@@ -47,155 +47,171 @@
         </li>
       </ul>
     </header>
+    <div class="line">
+      <hr />
+    </div>
     <main>
-      <section class="container-portfolio">
-        <ul class="buttons-style">
+      <section class="padding-prop">
+        <ul class="buttons-style container">
           <li>
-            <button type="button" class="all-button button-hover">All</button>
+            <button type="button" class="button-padding button-hover">
+              All
+            </button>
           </li>
           <li>
-            <button type="button" class="web-sites-button button-hover">
+            <button type="button" class="button-padding button-hover">
               Web-sites
             </button>
           </li>
           <li>
-            <button type="button" class="apps-button button-hover">Apps</button>
+            <button type="button" class="button-padding button-hover">
+              Apps
+            </button>
           </li>
           <li>
-            <button type="button" class="design-button button-hover">
+            <button type="button" class="button-padding button-hover">
               Design
             </button>
           </li>
           <li>
-            <button type="button" class="marketing-button button-hover">
+            <button type="button" class="button-padding button-hover">
               Marketing
             </button>
           </li>
         </ul>
       </section>
-      <section class="img-margin">
-        <ul class="second-line-style container-portfolio2 why">
+      <section class="padding-settings">
+        <ul class="container img-wrap">
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio1.jpg"
                 alt="Technoduck"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Technoduck
                 <div>Web-site</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio2.jpg"
                 alt="Poster New Orlean vs Golden Star"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Poster New Orlean vs Golden Star
                 <div>Design</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio3.jpg"
                 alt="Seafood Restaurant"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Seafood Restaurant
                 <div>Apps</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio4.jpg"
                 alt="Project Prime"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Project Prime
                 <div>Marketing</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio5.jpg"
                 alt="Project Boxes"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Project Boxes
                 <div>Apps</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Inspiration has no Borders
                 <div>Web-site</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio7.jpg"
                 alt="Limited Edition"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Limited Edition
                 <div>Design</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio8.jpg"
                 alt="Project LAB"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Project LAB
                 <div>Marketing</div>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure class="img-border">
+            <figure class="img-box">
               <img
+                class="no-gap"
                 src="images/portfolio9.jpg"
                 alt="Growing Business"
                 width="370"
                 height="294"
               />
-              <figcaption class="figcaption-padding">
+              <figcaption class="figcaption-padding box-border">
                 Growing Business
                 <div>Apps</div>
               </figcaption>
@@ -205,27 +221,29 @@
       </section>
     </main>
     <footer class="footer-background footer-style">
-      <ul>
-        <li class="logo">
-          <a href="#">WebStudio</a>
-        </li>
-      </ul>
-      <address class="address-padding">
-        <ul class="address-style">
-          <li>
-            695 Park Ave, New York, NY 10065,<br />
-            United States
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="hover"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
+      <div class="container-footer">
+        <ul>
+          <li class="logo">
+            <a href="#">WebStudio</a>
           </li>
         </ul>
-      </address>
+        <address class="address-padding">
+          <ul class="address-style">
+            <li>
+              695 Park Ave, New York, NY 10065,<br />
+              United States
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="hover"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
