--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="navigation">
         <ul class="header__list-style">
-          <li class="logo logo--padding">
+          <li class="logo">
             <a href="#">Web<span class="logo__color">Studio</span></a>
           </li>
           <li>
@@ -54,11 +54,35 @@
         </li>
       </ul>
     </header>
+    <div class="mobile-list">
+      <li class="logo logo--padding menu-toggle">
+        <a href="#">Web<span class="logo__color">Studio</span></a>
+      </li>
+      <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg
+          width="24"
+          height="24"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+    </div>
     <main>
       <div class="background">
         <section class="background__gradient">
           <h1 class="background__h1">
-            EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS
+            EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
           </h1>
           <button data-modal-open class="main-button main-button--placement">
             Request our service
@@ -151,7 +175,7 @@
         </ul>
       </section>
       <section class="our-team">
-        <h2 class="our-team__heading">Our Team</h2>
+        <h2 class="our-team__heading">Nasz zespół</h2>
         <ul class="our-team__container img-size">
           <li>
             <figure class="our-team__person-bg">
@@ -311,81 +335,77 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__container">
-        <ul class="footer__join-us">
-          <li class="logo">
-            <a href="#">Web<span class="footer__logo-color">Studio</span></a>
+      <!--<div class="footer__container">-->
+      <ul class="footer__join-us">
+        <li class="logo">
+          <a href="#">Web<span class="footer__logo-color">Studio</span></a>
+        </li>
+      </ul>
+      <address>
+        <ul class="footer__address">
+          <!--<div class="footer__display">-->
+          <li class="footer__padding">m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li class="footer__padding">
+            <a href="mailto:info@devstudio.com" class="navigation__hfa"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+1212-772-4150" class="navigation__hfa"
+              >+1 212-772-4150</a
+            >
           </li>
           <li><p class="footer__join-us__style">Dołącz do nas</p></li>
+          <li class="find-us-icons">
+            <div class="find-us-icons__style">
+              <svg width="20" height="20">
+                <use href="images/icons.svg#icon-instagram"></use>
+              </svg>
+            </div>
+            <div class="find-us-icons__style">
+              <svg width="20" height="20">
+                <use href="images/icons.svg#icon-twitter"></use>
+              </svg>
+            </div>
+            <div class="find-us-icons__style">
+              <svg width="20" height="20">
+                <use href="images/icons.svg#icon-facebook"></use>
+              </svg>
+            </div>
+            <div class="find-us-icons__style">
+              <svg width="20" height="20">
+                <use href="images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
+          </li>
           <li>
             <p class="footer__join-us__style footer__join-us__style--padding">
               Zapisz się do newslettera
             </p>
           </li>
+          <li>
+            <form class="footer__imput">
+              <label
+                ><!-- class="footer__email-input"-->
+                <input
+                  class="footer__email-style"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+            </form>
+          </li>
+          <li>
+            <button class="main-button" type="submit">Zapisz się</button>
+            <svg width="24" height="24" class="main-button__svg-send">
+              <use href="images/icons.svg#icon-send"></use>
+            </svg>
+          </li>
+          <!--</div>-->
         </ul>
-        <address>
-          <ul class="footer__address footer-styl">
-            <div class="footer__display">
-              <li>695 Park Ave, New York, NY 10065,<br />United States</li>
-              <li class="find-us-icons">
-                <div class="find-us-icons__style">
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </div>
-                <div class="find-us-icons__style">
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </div>
-                <div class="find-us-icons__style">
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </div>
-                <div class="find-us-icons__style">
-                  <svg width="20" height="20">
-                    <use href="images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </div>
-              </li>
-              <li>
-                <form>
-                  <label class="footer__email-input">
-                    <input
-                      class="footer__email-style"
-                      type="email"
-                      name="email"
-                      placeholder="E-mail"
-                    />
-                  </label>
-                </form>
-              </li>
-              <li>
-                <button
-                  class="main-button main-button--placement-send"
-                  type="submit"
-                >
-                  Zapisz się
-                </button>
-                <svg width="24" height="24" class="main-button__svg-send">
-                  <use href="images/icons.svg#icon-send"></use>
-                </svg>
-              </li>
-            </div>
-            <li>
-              <a href="mailto:info@devstudio.com" class="navigation__hfa"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+1212-772-4150" class="navigation__hfa"
-                >+1 212-772-4150</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+      </address>
+      <!--</div>-->
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -431,14 +451,16 @@
           </label>
           <div>
             <label class="checkbox">
-              <input
-                class="checkbox__style checkbox__svg-icon"
-                type="checkbox"
-                name="regulamin"
-                value="regulamin"
-              /><svg class="checkbox__check-svg" width="16" height="15">
-                <use href="images/icons.svg#icon-check"></use>
-              </svg>
+              <div class="checkbox__connector">
+                <input
+                  class="checkbox__svg-icon checkbox__style"
+                  type="checkbox"
+                  name="regulamin"
+                  value="regulamin"
+                /><svg class="checkbox__check-svg" width="16" height="15">
+                  <use href="images/icons.svg#icon-check"></use>
+                </svg>
+              </div>
               <p class="modal__terms">
                 Oświadczam iż akceptuję&nbsp;<a
                   class="modal__link-style"
@@ -450,7 +472,9 @@
             </label>
           </div>
           <div class="modal__btn-place">
-            <button class="main-button" type="submit">Send</button>
+            <button class="main-button main-button--send" type="submit">
+              Send
+            </button>
           </div>
         </form>
         <button class="modal__btn-close" data-modal-close>
@@ -461,5 +485,64 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li><a href="" class="link">Agencja</a></li>
+        <li><a href="" class="link">Portfolio</a></li>
+        <li><a href="" class="link">Kontakt</a></li>
+      </ul>
+      <ul class="navigation navigation--padding header__list-style">
+        <li>
+          <div class="contacts contacts--mobile-list">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </div>
+        </li>
+        <li>
+          <div class="contacts contacts--mobile-list contacts__padding">
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+          </div>
+        </li>
+      </ul>
+      <ul class="mobile-list__socialmedia">
+        <li>
+          <a class="mobile-list__border" href="">Instagram</a>
+        </li>
+        <li>
+          <a class="mobile-list__border" href="">Twitter</a>
+        </li>
+        <li>
+          <a class="mobile-list__border mobile-list__border--padding" href=""
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a class="mobile-list__border mobile-list__border--padding" href=""
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
