--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-07</title>
+    <title>goit-markup-hw-08</title>
     <link rel="stylesheet" href="css/modern-normalize.min.css" />
     <link href="css/main.min.css" rel="stylesheet " />
     <link href="images/icons.svg" rel="stylesheet" />
@@ -26,7 +26,7 @@
             <a
               href="#"
               class="navigation__hfa navigation__underline navigation__underline--studio"
-              >Studio</a
+              >Agencja</a
             >
           </li>
           <li class="navigation__inside-padding">
@@ -99,8 +99,8 @@
             </div>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
-              We go into all the details and processes of your business to
-              develop a customized solution.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
@@ -111,8 +111,8 @@
             </div>
             <h3>PUNCTUALITY</h3>
             <p>
-              With us, you can feel safe and secure. An important principle of
-              the company: respect your time and respect the agreed deadlines.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
@@ -123,8 +123,8 @@
             </div>
             <h3>PLANNING</h3>
             <p>
-              You will be able to observe and participate in every phase of
-              solution development and implementation.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
@@ -135,8 +135,8 @@
             </div>
             <h3>MODERN TECHNOLOGIES</h3>
             <p>
-              We use innovative tools to solve assigned tasks. It's time to
-              simplify work processes.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
         </ul>
@@ -180,8 +180,14 @@
           <li>
             <figure class="our-team__person-bg">
               <img
-                src="images/christopher_walker.jpg"
+                src="images/christopher_walker-450.jpg"
                 alt="Christopher Walker"
+                srcset="
+                  images/christopher_walker-450.jpg   450w,
+                  images/christopher_walker-900.jpg   900w,
+                  images/christopher_walker-1350.jpg 1350w
+                "
+                sizes="(max-width: 480px) 450w, (max-width: 769px) 900w, 100vw"
               />
               <figcaption class="our-team__figacaption">
                 Christopher Walker
@@ -211,7 +217,16 @@
           </li>
           <li>
             <figure class="our-team__person-bg">
-              <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
+              <img
+                src="images/kylie_evans.jpg"
+                alt="Kylie Evans"
+                srcset="
+                  images/kylie_evans-450.jpg   450w,
+                  images/kylie_evans-900.jpg   900w,
+                  images/kylie_evans-1350.jpg 1350w
+                "
+                sizes="(max-width: 480px) 450w, (max-width: 769px) 900w, 100vw"
+              />
               <figcaption class="our-team__figacaption">
                 Kylie Evans
                 <div class="our-team__position">Frontend Developer</div>
@@ -240,7 +255,16 @@
           </li>
           <li>
             <figure class="our-team__person-bg">
-              <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
+              <img
+                src="images/ryan_harris.jpg"
+                alt="Ryan Harris"
+                srcset="
+                  images/ryan_harris-450.jpg   450w,
+                  images/ryan_harris-900.jpg   900w,
+                  images/ryan_harris-1350.jpg 1350w
+                "
+                sizes="(max-width: 480px) 450w, (max-width: 769px) 900w, 100vw"
+              />
               <figcaption class="our-team__figacaption">
                 Ryan Harris
                 <div class="our-team__position">Marketing</div>
@@ -269,7 +293,16 @@
           </li>
           <li>
             <figure class="our-team__person-bg">
-              <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
+              <img
+                src="images/tyler_moore.jpg"
+                alt="Tyler Moore"
+                srcset="
+                  images/tyler_moore-450.jpg   450w,
+                  images/tyler_moore-900.jpg   900w,
+                  images/tyler_moore-1350.jpg 1350w
+                "
+                sizes="(max-width: 480px) 450w, (max-width: 769px) 900w, 100vw"
+              />
               <figcaption class="our-team__figacaption">
                 Tyler Moore
                 <div class="our-team__position">UI Designer</div>
@@ -335,89 +368,97 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__grid">
-        <div>
-          <ul class="footer__join-us">
-            <li class="logo">
-              <a href="#">Web<span class="footer__logo-color">Studio</span></a>
-            </li>
-          </ul>
-          <address>
-            <ul class="footer__address">
-              <li class="footer__padding">
-                m. Warszawa, Aleje Jerozolimskie 21
-              </li>
-              <li class="footer__padding">
-                <a href="mailto:info@devstudio.com" class="navigation__hfa"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+1212-772-4150" class="navigation__hfa"
-                  >+1 212-772-4150</a
+      <div class="footer__container">
+        <div class="footer__grid">
+          <div>
+            <ul class="footer__join-us">
+              <li class="logo">
+                <a href="#"
+                  >Web<span class="footer__logo-color">Studio</span></a
                 >
               </li>
             </ul>
-          </address>
+            <address>
+              <ul class="footer__address">
+                <li class="footer__padding">
+                  m. Warszawa, Aleje Jerozolimskie 21
+                </li>
+                <li class="footer__padding">
+                  <a href="mailto:info@devstudio.com" class="navigation__hfa"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+1212-772-4150" class="navigation__hfa"
+                    >+1 212-772-4150</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <p
+                  class="footer__join-us__style footer__join-us__style--padding"
+                >
+                  Dołącz do nas
+                </p>
+              </li>
+              <li class="find-us-icons">
+                <div class="find-us-icons__style">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="find-us-icons__style">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="find-us-icons__style">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="find-us-icons__style">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div>
+        <div class="footer__news">
           <ul>
             <li>
-              <p class="footer__join-us__style footer__join-us__style--padding">
-                Dołącz do nas
-              </p>
+              <p class="footer__join-us__style">Zapisz się do newslettera</p>
             </li>
-            <li class="find-us-icons">
-              <div class="find-us-icons__style">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="find-us-icons__style">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="find-us-icons__style">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="find-us-icons__style">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-linkedin"></use>
+            <li>
+              <form class="footer__imput">
+                <label class="footer__email-center">
+                  <input
+                    class="footer__email-style"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                  />
+                </label>
+              </form>
+            </li>
+          </ul>
+          <ul class="footer__ul-position">
+            <li class="find-us-icons find-us-icon--padding">
+              <div class="wut">
+                <button class="main-button" type="submit">Zapisz się</button>
+                <svg width="24" height="24" class="main-button__svg-send">
+                  <use href="images/icons.svg#icon-send"></use>
                 </svg>
               </div>
             </li>
           </ul>
         </div>
-      </div>
-      <div class="footer__news">
-        <ul>
-          <li>
-            <p class="footer__join-us__style">Zapisz się do newslettera</p>
-          </li>
-          <li>
-            <form class="footer__imput">
-              <label>
-                <input
-                  class="footer__email-style"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-            </form>
-          </li>
-        </ul>
-        <ul>
-          <li class="find-us-icons find-us-icon--padding">
-            <button class="main-button" type="submit">Zapisz się</button>
-            <svg width="24" height="24" class="main-button__svg-send">
-              <use href="images/icons.svg#icon-send"></use>
-            </svg>
-          </li>
-        </ul>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -515,9 +556,9 @@
         </svg>
       </button>
       <ul class="mobile-menu">
-        <li><a href="" class="link">Agencja</a></li>
-        <li><a href="" class="link">Portfolio</a></li>
-        <li><a href="" class="link">Kontakt</a></li>
+        <li><a href="#" class="link link__on-site">Agencja</a></li>
+        <li><a href="portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="#" class="link">Kontakt</a></li>
       </ul>
       <ul class="navigation navigation--padding header__list-style">
         <li>
