--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-07-portfolio</title>
+    <title>goit-markup-hw-08-portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -25,11 +25,13 @@
     <header class="header">
       <nav class="navigation">
         <ul class="header__list-style">
-          <li class="logo logo--padding">
+          <li class="logo logo__padding">
             <a href="index.html">Web<span class="logo__color">Studio</span></a>
           </li>
           <li>
-            <a href="index.html" class="navigation__hfa">Studio</a>
+            <a href="index.html" class="navigation__hfa navigation__underline"
+              >Agencja</a
+            >
           </li>
           <li class="navigation__inside-padding">
             <a
@@ -60,6 +62,30 @@
         </li>
       </ul>
     </header>
+    <div class="mobile-list">
+      <li class="logo logo--padding menu-container__toggle">
+        <a href="#">Web<span class="logo__color">Studio</span></a>
+      </li>
+      <button
+        class="menu-container__toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg
+          width="24"
+          height="24"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+    </div>
     <div class="navigation-line">
       <hr />
     </div>
@@ -298,21 +324,42 @@
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <ul class="footer__join-us">
-          <li class="logo">
-            <a href="#">Web<span class="footer__logo-color">Studio</span></a>
-          </li>
-          <li><p class="footer__join-us__style">Dołącz do nas</p></li>
-          <li>
-            <p class="footer__join-us__style footer__join-us__style--padding">
-              Zapisz się do newslettera
-            </p>
-          </li>
-        </ul>
-        <address>
-          <ul class="footer__address footer-styl">
-            <div class="footer__display">
-              <li>695 Park Ave, New York, NY 10065,<br />United States</li>
+        <div class="footer__grid">
+          <div>
+            <ul class="footer__join-us">
+              <li class="logo">
+                <a href="#"
+                  >Web<span class="footer__logo-color">Studio</span></a
+                >
+              </li>
+            </ul>
+            <address>
+              <ul class="footer__address">
+                <li class="footer__padding">
+                  m. Warszawa, Aleje Jerozolimskie 21
+                </li>
+                <li class="footer__padding">
+                  <a href="mailto:info@devstudio.com" class="navigation__hfa"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+1212-772-4150" class="navigation__hfa"
+                    >+1 212-772-4150</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <p
+                  class="footer__join-us__style footer__join-us__style--padding"
+                >
+                  Dołącz do nas
+                </p>
+              </li>
               <li class="find-us-icons">
                 <div class="find-us-icons__style">
                   <svg width="20" height="20">
@@ -335,43 +382,98 @@
                   </svg>
                 </div>
               </li>
-              <li>
-                <form>
-                  <label class="footer__email-input">
-                    <input
-                      class="footer__email-style"
-                      type="email"
-                      name="email"
-                      placeholder="E-mail"
-                    />
-                  </label>
-                </form>
-              </li>
-              <li>
-                <button
-                  class="main-button main-button--placement-send"
-                  type="submit"
-                >
-                  Zapisz się
-                </button>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__news">
+          <ul>
+            <li>
+              <p class="footer__join-us__style">Zapisz się do newslettera</p>
+            </li>
+            <li>
+              <form class="footer__imput">
+                <label class="footer__email-center">
+                  <input
+                    class="footer__email-style"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                  />
+                </label>
+              </form>
+            </li>
+          </ul>
+          <ul class="footer__ul-position">
+            <li class="find-us-icons find-us-icon--padding">
+              <div class="wut">
+                <button class="main-button" type="submit">Zapisz się</button>
                 <svg width="24" height="24" class="main-button__svg-send">
                   <use href="images/icons.svg#icon-send"></use>
                 </svg>
-              </li>
-            </div>
-            <li>
-              <a href="mailto:info@devstudio.com" class="navigation__hfa"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+1212-772-4150" class="navigation__hfa"
-                >+1 212-772-4150</a
-              >
+              </div>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-container__toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li><a href="index.html" class="link">Agencja</a></li>
+        <li><a href="#" class="link link__on-site">Portfolio</a></li>
+        <li><a href="#" class="link">Kontakt</a></li>
+      </ul>
+      <ul class="navigation navigation--padding header__list-style">
+        <li>
+          <div class="contacts contacts--mobile-list">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </div>
+        </li>
+        <li>
+          <div class="contacts contacts--mobile-list contacts__padding">
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+          </div>
+        </li>
+      </ul>
+      <ul class="mobile-list__socialmedia">
+        <li>
+          <a class="mobile-list__border mobile-list__border--no-padding" href=""
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a class="mobile-list__border" href="">Twitter</a>
+        </li>
+        <li>
+          <a class="mobile-list__border" href="">Facebook</a>
+        </li>
+        <li>
+          <a class="mobile-list__border mobile-list__border--padding" href=""
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
